--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:postgresql://localhost:5333/products-api
+spring.datasource.username=postgres
+spring.datasource.password=123123
+
+## Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# Não cria logs do hibernate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.application.name=bank
