--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,8 +8,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/fajbank?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: 12345678
+    username: "${FAJBANK_USERNAME_DATABASE}"
+    password: "${FAJBANK_PASSWORD_DATABASE}"
 
   flyway:
     baseline-on-migrate: true
