--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,3 +1,5 @@
+name: Pull Request Validation
+
 on:
   pull_request_target:
     types:
@@ -8,7 +10,7 @@ on:
       - unlabeled
 
 jobs:
-  test:
+  validate-pr:
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
@@ -17,6 +19,7 @@ jobs:
         with:
           message: |
             **Iniciando validação**
+      
       - uses: thehanimo/pr-title-checker@v1.4.3
         id: check
         continue-on-error: true
@@ -48,4 +51,39 @@ jobs:
           recreate: true
           message: |
               ### ✅ Título da PR Formatado Corretamente
-              O título desta PR foi atualizado para corresponder ao formato correto. Obrigado!      
+              O título desta PR foi atualizado para corresponder ao formato correto. Obrigado!
+
+  test:
+    runs-on: ubuntu-latest
+    needs: validate-pr
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Run Tests
+        run: mvn test
+
+      - name: Add test results comment
+        uses: mshick/add-pr-comment@v2
+        if: always()
+        with:
+          message: |
+            ### 🧪 Resultado dos Testes
+            
+            ${{ job.status == 'success' && '✅ Todos os testes passaram com sucesso!' || '❌ Alguns testes falharam. Por favor, verifique os logs para mais detalhes.' }}
+
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: target/surefire-reports/      
