--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -56,11 +56,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: validate-pr
+    permissions:
+      contents: read
+      pull-requests: write
+      checks: write
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -71,6 +76,8 @@ jobs:
 
       - name: Run Tests
         run: mvn test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Add test results comment
         uses: mshick/add-pr-comment@v2
@@ -80,10 +87,12 @@ jobs:
             ### 🧪 Resultado dos Testes
             
             ${{ job.status == 'success' && '✅ Todos os testes passaram com sucesso!' || '❌ Alguns testes falharam. Por favor, verifique os logs para mais detalhes.' }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Test Results
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-results
-          path: target/surefire-reports/      
+          path: target/surefire-reports/
+          retention-days: 14      
