--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -80,19 +80,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Add test results comment
-        uses: mshick/add-pr-comment@v2
+        uses: marocchino/sticky-pull-request-comment@v2
         if: always()
         with:
+          header: 'Test Results'
+          recreate: true
           message: |
             ### 🧪 Resultado dos Testes
             
             ${{ job.status == 'success' && '✅ Todos os testes passaram com sucesso!' || '❌ Alguns testes falharam. Por favor, verifique os logs para mais detalhes.' }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Test Results
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: target/surefire-reports/
-          retention-days: 14      
